--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean?</string>
     <string name="question_americas">The Amazon River is the longest River in the Americas</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake?</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer">Show answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgment_toast">Cheating is wrong.</string>
 </resources>
